# chess_compress_urlsafe

./: Cargo.toml  LICENSE.txt  README.md  check_lints.sh
src/: lib.rs
src/base/: a_move.rs  ambiguous_origin.rs  color.rs  direction.rs  errors.rs  mod.rs  position.rs  util.rs
src/compression/: base64.rs  compress.rs  decompress.rs  mod.rs
src/figure/: a_figure.rs  figure.rs  mod.rs
src/figure/functions/: is_reachable_by.rs
src/game/: board.rs  board_state.rs  game_state.rs  is_check.rs  mod.rs
